# codegraph

./: .gitignore  AGENT_PROTOCOL.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: RELEASE.md
src/codegraph/: __init__.py  architecture.py  cli.py  config.py  extractors.py  graph.py  ignore.py  models.py  overview.py  query.py  scanner.py  status.py
tests/: test_codegraph.py
tests/fixtures/alias_app/: README.md  codegraph.toml
tests/fixtures/alias_app/src/domains/Billing/screens/: InvoiceScreen.tsx
tests/fixtures/alias_app/src/hooks/: useInvoice.ts
tests/fixtures/ops_collection/: app.env  codegraph.toml
tests/fixtures/research_notes/: README.md
tests/fixtures/research_notes/notes/: graph-methods.md
tests/fixtures/research_notes/sources/: source-a.md
