[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codegraph"
version = "0.1.0"
description = "Evidence-backed graph indexing for technical collections."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Codegraph Contributors" }]
license = { text = "UNLICENSED" }
dependencies = []

[project.scripts]
codegraph = "codegraph.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
